--- a/asset/style.css
+++ b/asset/style.css
@@ -6,21 +6,79 @@ body{
     background-color: lightgray;
 }
 header{
-    padding:  1.5em;
     width: 100vw;
-    height: 30vh;
     position: relative;
     background-color:white;
     float: none;
 }
 .title-page{
     float: left;
-    left: 10%;
-    top: 3%;
+    left: 9%;
+    top: 1%;
+    font-size: 1.2em;
 }
   
 .logo{
     float: left;
-    left: 3%;
-    top: 3%;
+    left: 2%;
+    top: 1%;
+}
+.container{
+    width: 60vw;
+    height: 80vh;
+    margin: auto;
+    background-color: white;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding-top: 3%;
+    padding-left: 5%;
+    margin-top: 5px;
+    margin-bottom: 5vh;
+}
+.nav-container{
+    margin-bottom: 20px;
+    width: 60vw;
+    
+    margin: auto;
+    margin-top: 15vh;
+    background-color: white;      
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 5%;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.nav{
+    
+}
+.button-1{
+    border-style: hidden;
+    background-color: rgb(45, 180, 253);
+    color: white;
+    padding: 0.7em;
+    border-radius: 5px;
+    border: solid 1px rgb(45, 180, 253);
+}
+.button-2{
+    background-color: white;
+    color: rgb(196, 196, 196);
+    padding: 0.7em;
+    border-radius: 5px;
+    border: solid 1px rgb(196, 196, 196);
+
+}
+
+.d-arrow{
+    font-size: 15px;
+}
+.done{
+    color: green;
+}
+.not-done{
+    color: rgb(222, 34, 34);
+}
+ul{
+    list-style: none;
+    margin-block-end: 0;
+    margin-bottom: 10px;
 }
